# how-well-do-you-know-me

./: README.md
backend/: alembic.ini  app.py  config.py  data.json  database.py  endpoints.py  journey.md  models.py  pyproject.toml  requirements.txt  schema.py
backend/alembic/: env.py
backend/alembic/versions/: 2b3d76872ca8_option_and_user_answer_table.py  d8707b6317ee_inital_migration.py
backend/routes/: friend_answer.py  option.py  question.py  question_option_association.py  score_calculation.py  user_answer.py
