[tool.poetry]
name = "hwdynm0be"
version = "0.1.0"
description = ""
authors = ["imamtagupta <mamtag962000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
annotated-types = "0.6.0"
anyio = "4.2.0"
click = "8.1.7"
exceptiongroup = "1.2.0"
fastapi = "0.109.0"
h11 = "0.14.0"
idna = "3.6"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
sniffio = "1.3.0"
starlette = "0.35.1"
typing-extensions = "4.9.0"
uvicorn = "0.26.0"
psycopg2 = "^2.9.9"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
